--- a/trunk/flags/Makefile.ifort
+++ b/trunk/flags/Makefile.ifort
@@ -1,9 +1,9 @@
 # Compiler Parallel/Serial
 ifdef MPIPRG
-  CC = mpicc
+  CXX = mpicxx
   FC = mpif90
 else
-  CC = icpc
+  CXX = icpc
   FC = ifort
 endif
 
@@ -14,14 +14,15 @@ LD = $(FC)
 AR = ar
 
 # Optimization level
-CFLAGS  = -O2
-FFLAGS = -O2 -convert big_endian -cpp 
+CXXFLAGS  = -O2 -g
+FFLAGS = -O2 -convert big_endian -cpp -g
 
 #FFLAGS = -convert big_endian -p -g -O2
 #FFLAGS = -convert big_endian -no-prec-div -O0 -r8 -extend_source -vec-report=0 -fPIC -warn all -gen_interfaces -fpe0 -check all -g -traceback
 
 # Linking flags
 LDFLAGS = $(FFLAGS)
+LIBFLAGS=-lstdc++
 
 # Archiver flags
 ARFLAGS = rv
